# angohr

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.txt  vcpkg-configuration.json  vcpkg.json
angohr/: CMakeLists.txt  angohr.cpp  array.cpp  core.cpp  data.cpp  database.cpp  ello.cpp
cmake/: utils.cmake
tests/: CMakeLists.txt  angohr-test.cpp  database-test.cpp
